--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -15,6 +15,11 @@
 
   <title>HackTrin IX</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="img/favicons/site.webmanifest">
+
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,8 +32,6 @@
   <!-- Custom CSS -->
   <link href="css/stylish-portfolio.css" rel="stylesheet">
 
-
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
@@ -82,8 +85,8 @@
 <!-- Header -->
 <header class="header" id="top" style="
     margin-left: 0px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
 ">
   <div class="text-vertical-center">
 
@@ -348,36 +351,39 @@
       </aside>
     </div>
   </section>
+    <section id="team" class="team">
   <div id="content-desktop">
-  <div class="container" style="margin-right: 0px;margin-left: 0px;padding-right: 0px;padding-left: 0px;">
+  <div class="container" style="margin-right: auto;margin-left: auto;padding-right: auto;padding-left: auto;">
       <div class="col-lg-12" style="
-    padding-left: 310px;
-    padding-right: 0px;
+    padding-left: auto;
+    padding-right: auto;
 ">
         <center><h1 class="my-4"> <strong>HackTrin IX Team</strong></h1></center>
       </div>
 
       <div class="row" style="
-    margin-right: 0px;
-    margin-left: 265px;
+    margin-right: auto;
+    margin-left: auto;
     padding-left: 0px;
-    width: 750px;
+    width: 800px;
 ">
         <div class="flexBox" style="
         display: flex;
         width: 750px;
+        margin-left: -55px;
+        margin-right: auto;
         ">
 
-        <div class="col-5 text-center mb-5">
-          <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/lux.jpg" alt="">
+        <div class="col-5 text-center mb-4">
+          <img class="rounded-circle img-responsive" style="width:auto; height:180px;" src="img/team/lux.jpg" alt="">
           <h3>Lux Hogan-Murphy '22
             <br>
             <small>Co-President</small>
           </h3>
         </div>
 
-        <div class="col-5 text-center mb-5">
-          <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/elizabeth.jpg" alt="">
+        <div class="col-5 text-center mb-4">
+          <img class="rounded-circle img-responsive" style="width:auto; height:180px;"src="img/team/elizabeth.jpg" alt="">
           <h3>Elizabeth Ting '22
             <br>
             <small>Co-President</small>
@@ -385,7 +391,7 @@
         </div>
 
         <div class="col-5 text-center ml-12">
-          <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.jpg" alt="">
+          <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.png" alt="">
           <h3>Lake Gifford '23
             <br>
             <small>Co-President</small>
@@ -394,7 +400,104 @@
 
 
       </div>
+  <br>
+<div class="flexBox" style="
+display: flex;
+width: 750px;
+margin-left: 135px;
+margin-right: auto;
+">
+
+<div class="col-5 text-center mb-3 ml-0">
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Tahmid-Washy.jpg" alt="">
+  <h3>Tahmid Washy '22
+    <br>
+    <small>Outreach</small>
+  </h3>
+</div>
+
+<div class="col-5 text-center ml-0">
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Becca-Jekogian.jpg" alt="">
+  <h3>Becca Jekogian '23
+    <br>
+    <small>Outreach</small>
+  </h3>
+</div>
+</div>
+<br>
+      <div class="flexBox" style="
+      display: flex;
+      width: 750px;
+      margin-left: -75px;
+      margin-right: auto;
+      ">
+      <div class="col-5 text-center mb-4">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Brian-Shi.jpg" alt="">
+        <h3>Brian Shi '22
+          <br>
+          <small>Workshops</small>
+        </h3>
+      </div>
+
+
+      <div class="col-5 text-center ml-1">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Sophia-Zhang.jpg" alt="">
+        <h3>Sofia Zhang '24
+          <br>
+          <small>Workshops</small>
+        </h3>
+      </div>
+      <div class="col-5 text-center ml-0">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px; ml:5px;"src="img/team/anjali-kumar.jpg" alt="">
+        <h3>Anjali Kumar '24
+          <br>
+          <small>Workshops</small>
+        </h3>
+      </div>
+
     </div>
+    <br>
+    <div class="flexBox" style="
+    display: flex;
+    width: 750px;
+    margin-left: -235px;
+    margin-right: auto;
+    ">
+    <div class="col-5 text-center mb-3 ml-0">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/nathaniel-shalam.png" alt="">
+      <h3>Nathaniel Shalam '25
+        <br>
+        <small>Publicity</small>
+      </h3>
+    </div>
+
+    <div class="col-5 text-center mb-3 ml-0">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/ari-sussman.png" alt="">
+      <h3>Ari Sussman '22
+        <br>
+        <small>Publicity</small>
+      </h3>
+    </div>
+
+    <div class="col-5 text-center ml-0">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/nancy-chen.jpg" alt="">
+      <h3>Nancy Chen '23
+        <br>
+        <small>Publicity</small>
+      </h3>
+    </div>
+
+    <div class="col-5 text-center ml-0">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/ryman-smith.png" alt="">
+      <h3>Ryman Smith '23
+        <br>
+        <small>Publicity</small>
+      </h3>
+    </div>
+    </div>
+    <br>
+  </div>
+</div>
 </div>
 </div>
 
@@ -434,86 +537,9 @@
 </center>
   </div>
 </div>
-<!--
-    <div class="row">
-      <div class="flexBox" style="
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: center;">
-
-      <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lux.jpg" alt="">
-        <h3><small>Lux Hogan-Murphy '22</small>
-          <br>
-          <small> Co-President </small>
-        </h3>
-      </div>
-
-      <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/elizabeth.jpg" alt="">
-        <h3><small>Elizabeth Ting '22</small>
-          <br>
-          <small>Co-President</small>
-        </h3>
-      </div>
-
-      <div class="col-lg-2 col-sm-6 text-center mb-4">
-        <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lake.jpg" alt="">
-        <h3> <small>Lake Gifford '23</small>
-          <br>
-          <small>Co-President</small>
-        </h3>
-      </div>
-
-    </div>
-
-  </div>
-
-
-  <div class="row">
-    <div class="flexBox" style="
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;">
-
-    <div class="col-lg-2 col-sm-6 text-center mb-4">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/maia.jpg" alt="">
-      <h3><small>Maia Posternack '22</small>
-        <br>
-        <small> Advertising and Social Media</small>
-      </h3>
-    </div>
-
-    <div class="col-lg-2 col-sm-6 text-center mb-4">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/elizabeth.jpg" alt="">
-      <h3><small>Elizabeth Ting '22</small>
-        <br>
-        <small>Workshops</small>
-      </h3>
-    </div>
-
-    <div class="col-lg-2 col-sm-6 text-center mb-4">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lux.jpg" alt="">
-      <h3><small>Lux Hogan Murphy '22</small>
-        <br>
-        <small>Mentors and Judges Outreach</small>
-      </h3>
-    </div>
-
-    <div class="col-lg-2 col-sm-6 text-center mb-4">
-      <img class="rounded-circle img-fluid d-block mx-auto" src="img/team/lake.jpg" alt="">
-      <h3><small>Lake Gifford '23</small>
-        <br>
-        <small>Mentors and Judges Outreach</small>
-      </h3>
-    </div>
-  </div>
 
 </div>
--->
-<!-- /.container -->
-</div>
-
+  </section>
 <section id="mentors" class="mentors">
   <aside class="call-to-action bg-primary text-white">
     <div class="container text-center">
@@ -553,10 +579,10 @@
       height: 125px;
       ">
       <div class="col-7 text-center mT-5">
-          <h4><a href="http://studentdisrupt.org/"><img width = 410px src = 'img/studentDisrupt.png'></a></h4>
+          <h4><a href="http://studentdisrupt.org/"><img width = 410px src = 'img/hackathonlogos/studentDisrupt.png'></a></h4>
       </div>
       <div class="col-5 text-center mT-5">
-          <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = 400px src = 'img/bit_by_bit.png'></a></h4>
+          <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = 400px src = 'img/hackathonlogos/bit_by_bit.png'></a></h4>
       </div>
         </div>
       <div class="flexBox" style="
@@ -564,10 +590,10 @@
       width: 750px;
       ">
       <div class="col-7 text-center mb-5">
-    <h4><a href="https://www.stuyhacks.org/"><img width = 400px src = 'img/stuy.png'></a></h4>
+    <h4><a href="https://www.stuyhacks.org/"><img width = 400px src = 'img/hackathonlogos/stuy.png'></a></h4>
       </div>
       <div class="col-7 text-center mb-5">
-          <h4><a href="https://www.cs.cornell.edu/information/news/newsitem11597/cornell-university-high-school-programming-contest-spring-2021"><img width = 275px height = 275px src = 'img/cornell.png'></a></h4>
+          <h4><a href="https://www.cs.cornell.edu/information/news/newsitem11597/cornell-university-high-school-programming-contest-spring-2021"><img width = 275px height = 275px src = 'img/hackathonlogos/cornell.png'></a></h4>
       </div>
     </div>
   </div>
@@ -591,16 +617,16 @@
     </div>
 
       <div class="col-7 text-center mt-5">
-          <h4><a href="http://studentdisrupt.org/"><img width = 360px mb=40px src = 'img/studentDisrupt.png'></a></h4>
+          <h4><a href="http://studentdisrupt.org/"><img width = 360px mb=40px src = 'img/hackathonlogos/studentDisrupt.png'></a></h4>
       </div>
       <div class="col-5 text-center mt-5">
-          <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = 360px mb=40px src = 'img/bit_by_bit.png'></a></h4>
+          <h4><a href="http://blogs.dalton.org/bitbybit/"><img width = 360px mb=40px src = 'img/hackathonlogos/bit_by_bit.png'></a></h4>
       </div>
       <div class="col-7 text-center mt-5">
-    <h4><a href="https://www.stuyhacks.org/"><img width = 360px src = 'img/stuy.png'></a></h4>
+    <h4><a href="https://www.stuyhacks.org/"><img width = 360px src = 'img/hackathonlogos/stuy.png'></a></h4>
       </div>
       <div class="col-7 text-center mb-5 mt-5">
-          <h4><a href="https://www.cs.cornell.edu/information/news/newsitem11597/cornell-university-high-school-programming-contest-spring-2021"><img width = 360px height = 360px src = 'img/cornell.png'></a></h4>
+          <h4><a href="https://www.cs.cornell.edu/information/news/newsitem11597/cornell-university-high-school-programming-contest-spring-2021"><img width = 360px height = 360px src = 'img/hackathonlogos/cornell.png'></a></h4>
       </div>
     </div>
     </section>
@@ -609,24 +635,27 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-lg-10 mx-auto text-center">
+          <div class="col-lg-20 mx-auto text-center">
             <h4>
               <strong>HackTrin</strong>
             </h4>
             <p>Trinity School
               <br>115 W 91st St <br> New York, NY 10024 </p>
               <ul class="list-unstyled">
-                <!-- <li>
-                <i class="fa fa-phone fa-fw"></i>
-                (123) 456-7890</li> -->
 
-                <ul class="list-inline">
+
+                <ul class="list-inline" style="margin-left:-45px;">
                     <li class="list-inline-item">
                       <a href="https://www.instagram.com/trinitycompsci/">
                         <i class="fa fa-instagram fa-fw fa-3x" aria-hidden="true"></i>
                       </a>
-                      </li>
-
+                        <a href="https://www.trinityschoolnyc.org/">
+                          <div class="card">
+                            <img src="img/T logo.png" style="margin-top:-27px"height="41.5px"alt="">
+                            <img src="img/T logo dark.png" class="img-top" style="margin-top:-27px" height="41.5px" alt="">
+                          </div>
+                        </a>
+                        </li>
 
 
               </ul>
