--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -59,12 +59,6 @@
         <a class="js-scroll-trigger" href="#about">About</a>
       </li>
       <li>
-        <a class="js-scroll-trigger" href="#register">Register</a>
-      </li>
-      <li>
-        <a class="js-scroll-trigger" href="#w">Details</a>
-      </li>
-      <li>
         <a class="js-scroll-trigger" href="#faq">FAQ</a>
       </li>
       <li>
@@ -101,17 +95,16 @@
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
       <h1>HackTrin IX</h1>
-      <h2>Sunday February 27th, 2022</h2>
-      <h2>9:00am - 5:00pm</h2>
-      <h2>Trinity School's annual hackathon</h2>
-      <h2>Come spend February 27th coding with us!</h2>
-      <br>
+      <h2>2/27/2022</h2>
+      <h3>Trinity School's annual hackathon</h3>
+      <h3>Come spend February 27th coding with us!</h3>
+
       <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
 <div id="content-desktop">
     <div id="c1">
         <style>
-          #c1 {display:block;width:1000px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
+          #c1 {display:block;width:950px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
         </style>
         <div>Countdown to HackTrin IX</div>
         <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
@@ -274,38 +267,6 @@
         <!-- /.container -->
       </section>
 
-      <section id="register" class="register">
-        <aside class="call-to-action bg-primary text-white">
-        <div class="container text-center">
-          <h1><strong>Register</strong></h1>
-          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
-        </aside>
-        </div>
-      </section>
-
-
-      <section id="w" class="w">
-        <div class="container text-center">
-          <br>
-          <h1><strong>Details</strong></h2>
-          <br>
-          <h3><strong>WHO:</strong></h3>
-          <h3>You and a team of up to 3 other people.</h3>
-          <br>
-          <h3><strong>WHAT:</strong></h3>
-          <h3>A fun hackathon where you spend the day coding a project from scratch!</h3>
-          <br/>
-          <h3><strong>WHEN:</strong></h3>
-          <h3>Sunday February 27th, 2022 from 9:00am - 5:00pm</h3>
-          <br>
-          <h3><strong>WHERE:</strong></h3>
-          <h3>The Trinity School, NYC (101 W 91st Street)</h3>
-          <br>
-          <h3><strong>WHY:</strong></h3>
-          <h3>Have fun, get free food, receive swag, and learn about coding!</h3>
-          <br/>
-        </div>
-      </section>
       <!-- Call to Action -->
       <section id="faq" class="faq">
         <aside class="call-to-action bg-primary text-white">
@@ -319,7 +280,7 @@
               <em><h3>Anything you want, as long as it involves some coding component and relates to the theme.  Popular projects in the past have included websites, apps, games, gagdets, or whatever else you come up with!</h3></em>
               <br/>
               <h3><strong>Is there a theme at HackTrin?</strong></h3>
-              <em><h3>We're announcing the theme for HackTrin on the website one week before, as well as notifying all participants by email. Once you receive the theme, you can brainstorm ideas, but all work and coding must be done during the competition window.</h3></em>
+              <em><h3>We're announcing the theme for HackTrin on the website two weeks before, as well as notifying all participants by email.</h3></em>
               <br>
               <h3><strong>Who can come to HackTrin?</strong></h3>
               <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
@@ -329,10 +290,6 @@
               <br>
               <h3><strong>What is Discord?</strong></h3>
               <em><h3>Discord is the platform that virtual HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a <u style="color:white" href="https://discord.com/register">here</a></u>.</h3></em>
-              <br>
-              <h3><strong>What do I need to bring?</strong></h3>
-              <em><h3>Please bring your own computer and charger. Charging outlets will be accessible during the competition.</h3></em>
-
             </div>
           </aside>
         </section>
