Image fixes and mobile width fixes

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -114,7 +114,7 @@
 <div id="content-mobile">
     <div id="c2">
         <style>
-          #c2 {display:block;width:400px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:8px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:18pt;color:#fff;}
+          #c2 {display:block;width:396px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:8px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:18pt;color:#fff;}
         </style>
         <div>Countdown to HackTrin IX</div>
 <script class="a2c45bcd512352fdc5ae7bb2ba4f0d61" src="https://w.promofeatures.com/js/timer/a2c45bcd512352fdc5ae7bb2ba4f0d61.js?v=1643936124"></script>
@@ -312,26 +312,6 @@
             <h3><b>Judges' Choice </b> <em> -- The project that the judges think is especially inventive, holds a lot of promise, or stands out in ways different from the other categories</em></h3>
 
 
-            <!---
-            <center>
-            <table align="center" class="centerTable">
-            <tbody align="left">
-            <td><strong>Tentative Schedule </strong></td>                          </tr>
-            <td><strong>(subject to change)</strong></td>                          </tr>
-            <td><strong>Sunday, March 8th</strong></td>                          </tr>
-            <tr>  <td>8:30-9:00</td> <td> Setup and sign-in </td>          </tr>
-            <tr>  <td>9:00-9:30</td> <td> Welcome and introductions </td>     </tr>
-            <tr>  <td>9:30-12:30</td> <td>  Coding and workshops</td>               </tr>
-            <tr>  <td>12:30-1:15</td> <td>  Lunch and coding</td>               </tr>
-            <tr>  <td>1:15-2:15</td> <td> Coding and workshops</td>       </tr>
-            <tr>  <td>2:15-2:45</td> <td> HackTrin Junior (middle school) presentations (attendance optional for high schoolers)</td>       </tr>
-            <tr>  <td>2:45-3:00</td> <td> HackTrin Junior awards (attendance optional for high schoolers)</td>       </tr>
-            <tr>  <td>3:00-5:00</td> <td> Coding and workshops (high schoolers)</td>       </tr>
-            <tr>  <td>5:00-6:00</td> <td> Presentations</td>  </tr>
-            <tr>  <td>  6:00-6:30</td> <td> Awards </td></tr>
-          </tbody></table>
-        </center>
-      -->
       <br>
       <br>
 
@@ -448,7 +428,7 @@ margin-right: auto;
         </h3>
       </div>
       <div class="col-5 text-center ml-0">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px; ml:5px;"src="img/team/anjali-kumar.jpg" alt="">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px; ml:5px;"src="img/team/Anjali-Kumar.jpg" alt="">
         <h3>Anjali Kumar '24
           <br>
           <small>Workshops</small>
@@ -464,7 +444,7 @@ margin-right: auto;
     margin-right: auto;
     ">
     <div class="col-5 text-center mb-3 ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/nathaniel-shalam.png" alt="">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-Shalam.png" alt="">
       <h3>Nathaniel Shalam '25
         <br>
         <small>Publicity</small>
@@ -472,7 +452,7 @@ margin-right: auto;
     </div>
 
     <div class="col-5 text-center mb-3 ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/ari-sussman.png" alt="">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Ari-Sussman.png" alt="">
       <h3>Ari Sussman '22
         <br>
         <small>Publicity</small>
@@ -480,7 +460,7 @@ margin-right: auto;
     </div>
 
     <div class="col-5 text-center ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/nancy-chen.jpg" alt="">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nancy-Chen.jpg" alt="">
       <h3>Nancy Chen '23
         <br>
         <small>Publicity</small>
@@ -488,7 +468,7 @@ margin-right: auto;
     </div>
 
     <div class="col-5 text-center ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/ryman-smith.png" alt="">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Ryman-Smith.png" alt="">
       <h3>Ryman Smith '23
         <br>
         <small>Publicity</small>
