additional team photo adjustments

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -444,7 +444,7 @@ margin-right: auto;
     margin-right: auto;
     ">
     <div class="col-5 text-center mb-3 ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-Shalam.png" alt="">
+      <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-shalam.png" alt="">
       <h3>Nathaniel Shalam '25
         <br>
         <small>Publicity</small>
@@ -508,7 +508,7 @@ margin-right: auto;
       </div>
 
       <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.jpg" alt="">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.png" alt="">
         <h3>Lake Gifford '23
           <br>
           <small>Co-President</small>
