--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="HackTrin IX is the ninth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
   can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors
-  to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building).
+  to help you with your projects and learn! The theme for this year is Environment. Participants may start planning their project ahead of the event date (but not coding or building).
    Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
@@ -56,6 +56,12 @@
         <a class="js-scroll-trigger" href="#top">Home</a>
       </li>
       <li>
+  <a class="js-scroll-trigger" href="#register">Register</a>
+</li>
+<li>
+  <a class="js-scroll-trigger" href="#w">HackTrin?</a>
+</li>
+      <li>
         <a class="js-scroll-trigger" href="#about">About</a>
       </li>
       <li>
@@ -95,7 +101,8 @@
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
       <h1>HackTrin IX</h1>
-      <h2>2/27/2022</h2>
+      <h2>Sunday February 27th, 2022</h2>
+      <h2>9:00am - 5:00pm</h2>
       <h3>Trinity School's annual hackathon</h3>
       <h3>Come spend February 27th coding with us!</h3>
 
@@ -104,7 +111,7 @@
 <div id="content-desktop">
     <div id="c1">
         <style>
-          #c1 {display:block;width:950px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
+          #c1 {display:block;width:950px;margin:10px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
         </style>
         <div>Countdown to HackTrin IX</div>
         <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
@@ -257,7 +264,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1><strong>About HackTrin</strong></h1>
-        <h3>HackTrin IX is the ninth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! We will announce the secret theme two weeks before HackTrin, after which you can start planning (but not coding or building). Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin IX is the ninth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme for this year is <i> Environment </i>. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
 
           </div>
@@ -280,7 +287,7 @@
               <em><h3>Anything you want, as long as it involves some coding component and relates to the theme.  Popular projects in the past have included websites, apps, games, gagdets, or whatever else you come up with!</h3></em>
               <br/>
               <h3><strong>Is there a theme at HackTrin?</strong></h3>
-              <em><h3>We're announcing the theme for HackTrin on the website two weeks before, as well as notifying all participants by email.</h3></em>
+              <em><h3>The theme for this year is <strong> Environment </strong></h3></em>
               <br>
               <h3><strong>Who can come to HackTrin?</strong></h3>
               <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
@@ -626,10 +633,10 @@ margin-right: auto;
 
                 <ul class="list-inline" style="margin-left:-45px;">
                     <li class="list-inline-item">
-                      <a href="https://www.instagram.com/trinitycompsci/">
+                      <a href="https://www.instagram.com/trinitycompsci/" target=”_blank”>
                         <i class="fa fa-instagram fa-fw fa-3x" aria-hidden="true"></i>
                       </a>
-                        <a href="https://www.trinityschoolnyc.org/">
+                        <a href="https://www.trinityschoolnyc.org/" c>
                           <div class="card">
                             <img src="img/T logo.png" style="margin-top:-27px"height="41.5px"alt="">
                             <img src="img/T logo dark.png" class="img-top" style="margin-top:-27px" height="41.5px" alt="">
