--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -6,14 +6,14 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="HackTrin IX is the ninth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
+  <meta name="description" content="HackTrin X is the tenth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
   can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors
   to help you with your projects and learn! The theme for this year is Environment. Participants may start planning their project ahead of the event date (but not coding or building).
-   Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
+   Coding and building starts February 25th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
-  <title>HackTrin IX</title>
+  <title>HackTrin X</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
@@ -100,11 +100,11 @@
       <br>
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
-      <h1>HackTrin IX</h1>
-      <h2>Sunday February 27th, 2022</h2>
+      <h1>HackTrin X</h1>
+      <h2>Saturday February 25th, 2023</h2>
       <h2>9:00am - 5:00pm</h2>
       <h3>Trinity School's annual hackathon</h3>
-      <h3>Come spend February 27th coding with us!</h3>
+      <h3>Come spend February 25th coding with us!</h3>
 
       <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
@@ -113,7 +113,7 @@
         <style>
           #c1 {display:block;width:950px;margin:10px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
         </style>
-        <div>Countdown to HackTrin IX</div>
+        <div>Thank You For Attending HackTrin X</div>
         <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
     </div>
 </div>
@@ -123,7 +123,7 @@
         <style>
           #c2 {display:block;width:396px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:8px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:18pt;color:#fff;}
         </style>
-        <div>Countdown to HackTrin IX</div>
+        <div>Thank You For Attending HackTrin X</div>
 <script class="a2c45bcd512352fdc5ae7bb2ba4f0d61" src="https://w.promofeatures.com/js/timer/a2c45bcd512352fdc5ae7bb2ba4f0d61.js?v=1643936124"></script>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1><strong>About HackTrin</strong></h1>
-        <h3>HackTrin IX is the ninth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme for this year is <i> Environment </i>. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts February 27th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin X is the tenth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme for this year is <i> Environment </i>. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts February 25th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
 
           </div>
@@ -345,7 +345,7 @@
     padding-left: auto;
     padding-right: auto;
 ">
-        <center><h1 class="my-4"> <strong>HackTrin IX Team</strong></h1></center>
+        <center><h1 class="my-4"> <strong>HackTrin X Team</strong></h1></center>
       </div>
 
       <div class="row" style="
@@ -494,7 +494,7 @@ margin-right: auto;
   padding-left: 0px;
   padding-right: 0px;
 ">
-      <center><h1 class="my-4"><strong>HackTrin IX Team</strong></h1></center>
+      <center><h1 class="my-4"><strong>HackTrin X Team</strong></h1></center>
     </div>
 
 <center>
@@ -647,7 +647,7 @@ margin-right: auto;
 
               </ul>
               <hr class="small">
-              <p class="text-muted">© 2022 HackTrin / Trinity Episcopal School Corp.</p>
+              <p class="text-muted">© 2023 HackTrin / Trinity Episcopal School Corp.</p>
               <p style="margin-top:-15px"class="text-muted">All rights reserved</p>
             </div>
           </div>
