--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="HackTrin X is the tenth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
   can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors
   to help you with your projects and learn! The theme will be announced shortly before the event. Participants may start planning their project ahead of the event date (but not coding or building).
-   Coding and building starts February 25th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
+   Coding and building starts early spring. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
@@ -36,7 +36,7 @@
 
 <body>
   <button type="button" id="sign-up" class="btn btn-light  btn-lg hide-on-firefox">
-    <a target="_blank" class="d" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link">Sign Up!</a>
+    <a target="_blank" class="d">Sign Up!</a>
   </button>
 
 
@@ -101,12 +101,12 @@
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
       <h1>HackTrin X</h1>
-      <h2>Saturday February 25th, 2023</h2>
+      <h2> February 2023</h2>
       <h2>9:00am - 5:00pm</h2>
       <h3>Trinity School's annual hackathon</h3>
-      <h3>Come spend February 25th coding with us!</h3>
+      <h3>Come code with us!</h3>
 
-      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf9gLKviVAKYE349SCYyjRPNGbnGjpcQxI_Hd07Rk0XxMm9Qg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
+      <a target="_blank" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
 <div id="content-desktop">
     <div id="c1">
@@ -264,7 +264,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1><strong>About HackTrin</strong></h1>
-        <h3>HackTrin X is the tenth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme will be announced shortly before the event. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts February 25th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin X is the tenth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme will be announced shortly before the event. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts early spring. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
 
           </div>
@@ -532,8 +532,6 @@ margin-right: auto;
     <div class="container text-center">
       <h1><strong>Mentors</strong></h1>
       <h3>Do you have experience with coding or engineering and want to help students with their projects?  If so, sign up to be a mentor!</h3>
-      <button type="button" class="btn btn-light">
-        <a target="_blank" class="" href="https://forms.gle/8vH8oeBavmK67e9o8">Sign Up Here For Mentors</a>
       </button>
     </div>
   </aside>
