--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -123,7 +123,7 @@
         <style>
           #c2 {display:block;width:396px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:8px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:18pt;color:#fff;}
         </style>
-        <div>Thank You For Attending HackTrin X</div>
+        <div>Countdown to HackTrin X</div>
 <script class="a2c45bcd512352fdc5ae7bb2ba4f0d61" src="https://w.promofeatures.com/js/timer/a2c45bcd512352fdc5ae7bb2ba4f0d61.js?v=1643936124"></script>
     </div>
 </div>
