--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -113,7 +113,7 @@
         <style>
           #c1 {display:block;width:950px;margin:10px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
         </style>
-        <div>Thank You For Attending HackTrin X</div>
+        <div>Countdown to HackTrin X</div>
         <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
     </div>
 </div>
