date changes and team changes

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="HackTrin X is the tenth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
   can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors
   to help you with your projects and learn! The theme will be announced shortly before the event. Participants may start planning their project ahead of the event date (but not coding or building).
-   Coding and building starts early spring. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
+   Coding and building starts on March 4th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
@@ -101,10 +101,10 @@
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
       <h1>HackTrin X</h1>
-      <h2> February 2023</h2>
+      <h2> March 4th, 2023</h2>
       <h2>9:00am - 5:00pm</h2>
       <h3>Trinity School's annual hackathon</h3>
-      <h3>Come code with us!</h3>
+      <h3>Come spend March 4th coding with us!</h3>
 
       <a target="_blank" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
@@ -264,7 +264,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1><strong>About HackTrin</strong></h1>
-        <h3>HackTrin X is the tenth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme will be announced shortly before the event. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts early spring. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin X is the tenth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme will be announced shortly before the event. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts on March 4th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
 
           </div>
@@ -356,32 +356,16 @@
 ">
         <div class="flexBox" style="
         display: flex;
-        width: 750px;
-        margin-left: -55px;
+        width: auto;
+        margin-left: auto;
         margin-right: auto;
         ">
-
-        <div class="col-5 text-center mb-4">
-          <img class="rounded-circle img-responsive" style="width:auto; height:180px;" src="img/team/lux.jpg" alt="">
-          <h3>Lux Hogan-Murphy '22
-            <br>
-            <small>Co-President</small>
-          </h3>
-        </div>
-
-        <div class="col-5 text-center mb-4">
-          <img class="rounded-circle img-responsive" style="width:auto; height:180px;"src="img/team/elizabeth.jpg" alt="">
-          <h3>Elizabeth Ting '22
-            <br>
-            <small>Co-President</small>
-          </h3>
-        </div>
 
         <div class="col-5 text-center ml-12">
           <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.png" alt="">
           <h3>Lake Gifford '23
             <br>
-            <small>Co-President</small>
+            <small>President</small>
           </h3>
         </div>
 
@@ -390,19 +374,10 @@
   <br>
 <div class="flexBox" style="
 display: flex;
-width: 750px;
-margin-left: 135px;
+width: auto;
+margin-left: auto;
 margin-right: auto;
 ">
-
-<div class="col-5 text-center mb-3 ml-0">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Tahmid-Washy.jpg" alt="">
-  <h3>Tahmid Washy '22
-    <br>
-    <small>Outreach</small>
-  </h3>
-</div>
-
 <div class="col-5 text-center ml-0">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Becca-Jekogian.jpg" alt="">
   <h3>Becca Jekogian '23
@@ -410,79 +385,25 @@ margin-right: auto;
     <small>Outreach</small>
   </h3>
 </div>
+
+<div class="col-5 text-center ml-0">
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-shalam.png" alt="">
+  <h3>Nathaniel Shalam '25
+    <br>
+    <small>Publicity</small>
+  </h3>
 </div>
-<br>
-      <div class="flexBox" style="
-      display: flex;
-      width: 750px;
-      margin-left: -75px;
-      margin-right: auto;
-      ">
-      <div class="col-5 text-center mb-4">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Brian-Shi.jpg" alt="">
-        <h3>Brian Shi '22
-          <br>
-          <small>Workshops</small>
-        </h3>
-      </div>
 
-
-      <div class="col-5 text-center ml-1">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Sophia-Zhang.jpg" alt="">
-        <h3>Sofia Zhang '24
-          <br>
-          <small>Workshops</small>
-        </h3>
-      </div>
-      <div class="col-5 text-center ml-0">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px; ml:5px;"src="img/team/Anjali-Kumar.jpg" alt="">
-        <h3>Anjali Kumar '24
-          <br>
-          <small>Workshops</small>
-        </h3>
-      </div>
-
-    </div>
+<div class="col-5 text-center ml-0">
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nancy-Chen.jpg" alt="">
+  <h3>Nancy Chen '23
     <br>
-    <div class="flexBox" style="
-    display: flex;
-    width: 750px;
-    margin-left: -235px;
-    margin-right: auto;
-    ">
-    <div class="col-5 text-center mb-3 ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-shalam.png" alt="">
-      <h3>Nathaniel Shalam '25
-        <br>
-        <small>Publicity</small>
-      </h3>
-    </div>
+    <small>Art and Design</small>
+  </h3>
+</div>
 
-    <div class="col-5 text-center mb-3 ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Ari-Sussman.png" alt="">
-      <h3>Ari Sussman '22
-        <br>
-        <small>Publicity</small>
-      </h3>
-    </div>
+</div>
 
-    <div class="col-5 text-center ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nancy-Chen.jpg" alt="">
-      <h3>Nancy Chen '23
-        <br>
-        <small>Publicity</small>
-      </h3>
-    </div>
-
-    <div class="col-5 text-center ml-0">
-      <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Ryman-Smith.png" alt="">
-      <h3>Ryman Smith '23
-        <br>
-        <small>Publicity</small>
-      </h3>
-    </div>
-    </div>
-    <br>
   </div>
 </div>
 </div>
