--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -363,7 +363,7 @@
 
         <div class="col-5 text-center ml-12">
           <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.png" alt="">
-          <h3>Lake Gifford '23
+          <h3 style="width: 182px;">Lake Gifford '23
             <br>
             <small>President</small>
           </h3>
@@ -371,14 +371,14 @@
 
 
       </div>
-  <br>
+
 <div class="flexBox" style="
 display: flex;
 width: auto;
-margin-left: auto;
+margin-left: -65px;
 margin-right: auto;
 ">
-<div class="col-5 text-center ml-0">
+<div class="col-5 text-center">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Becca-Jekogian.jpg" alt="">
   <h3>Becca Jekogian '23
     <br>
@@ -386,15 +386,15 @@ margin-right: auto;
   </h3>
 </div>
 
-<div class="col-5 text-center ml-0">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-shalam.png" alt="">
+<div class="col-5 text-center">
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-shalam.jpeg" alt="">
   <h3>Nathaniel Shalam '25
     <br>
     <small>Publicity</small>
   </h3>
 </div>
 
-<div class="col-5 text-center ml-0">
+<div class="col-5 text-center">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nancy-Chen.jpg" alt="">
   <h3>Nancy Chen '23
     <br>
